--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+rocket = {version = "0.5", features = ["json"]}
+serde = "1"
+serde_derive = "1"
+serde_json = "1"
+url = "2"
